themes/_administration/style.css
/* ... */
input.ui-button { padding:1px 3px;}
input, textarea {	color:black; padding-left:3px; padding-right:3px;}
fieldset {margin:8px 8px 4px 8px;}
legend {font-style:italic; font-weight:bold;	padding:0 5px 5px; align:top;}
img {border:none;}
h3 {margin:0}
h4 {margin: 5px 3px; font-weight:normal; font-style:italic;}
.icon {border:none;	padding-left:0pt;padding-right:5pt;}
.warning, .error, .red {	font-weight:bold; color:red;}
.accepted {font-weight:bold; color:green;}
.center {text-align:center;}
.ltr {text-align:left;}
.rtl {text-align:right;}
.nowrap {white-space:nowrap;}
.indent {padding-left:15px;}
.ui-widget-content a {text-decoration:none;}
.ui-widget-content a.current {color:#E17009; font-weight:bold;}
.ui-widget-content a:hover {color:red; cursor:hand; cursor:pointer;}
.ui-widget-header {padding:5px;}
.css_right {float:right;}

/* Drag-n-drop sorting for modules, etc. */
.sortme {cursor: move;}

/* Page Help links */
#page_help{text-align:right;}
#page_help img{ height: 24px; margin: -5px; padding: 0; width: 24px;}

/* HEADER */
#admin_head  {position:relative; height:70px; margin-bottom:10px; background-image: url("images/header.png"); background-repeat:no-repeat; background-position:top left;}
#title  {position:absolute; left:47%; top: 20px; font-size:18px; font-weight:bold;}
#info  {position:absolute; right:10px; bottom:0;text-align:right;}
#links {position:absolute; left:10px; bottom:0; display:inline;margin-bottom:5px;}
#links li {display:inline;position:relative;white-space:nowrap;}
#links li ul {display:none;	position:absolute;left:0px;top:1.5em; background: url("images/ui-bg_fine-grain_10_eceadf_60x60.png") repeat scroll 50% 50% #ECEADF; border: 1px solid #D9D6C4;z-index:999;}
#links li ul li {display:block; padding: 0 5px;text-align:left;}
#links, #links li ul {list-style:none;margin:0;	padding:1px;}
#links li:hover > ul {display:block;}

/* SIDE and CONTENT panels */
#admin_menu, #admin_content {min-height:720px;}

/* SIDE MENU */
#admin_menu {padding:10px 0 10px 5px; width:200px; float:left; position:absolute; color:#2E6E9E;}
#admin_menu ul {list-style: none outside none; margin:0 0 0 -30px;}
#admin_menu li ul {list-style: none outside none; margin:0 0 0 -20px;}
#admin_menu li ul span {font-style: italic; font-weight:bold;}

/* CONTENT */
#admin_content {margin-left:220px; padding:10px;}

/* FOOTER */
#admin_footer {float:left; text-align:center; width:100%; margin-top:30px;}

/* INDEX */
#admin_index {}

/* All DASHBOARD BLOCKS */
#about, #block1 , #block2, #block3{background:OldLace; padding:5px; border:1px inset #D9D6C4;}
#about h2, #block1 h2, #block2 h2, #block3 h2 {margin:0;}
#tree_stats h3, #changes h3  {text-align:left;}
#block1, #block2, #block3 {height:540px; overflow:auto; width:31%;}
#block1  {float:left;}
#block2  {margin: 0 auto;}
#block3  {float:right;}
#about {margin-bottom:10px;}
#tree_stats th, #changes th {padding: 0 10px 0 0; text-align:left; white-space:nowrap; font-weight:normal;}
#tree_stats td, #changes td {padding-right:10px; width:30px; text-align:right; white-space:nowrap;}
#tree_stats .ui-accordion-content, #changes .ui-accordion-content {padding: 1em 0;}
#tree_stats.ui-widget, #changes.ui-widget {font-size: 100% !important;}
.ui-accordion .ui-accordion-content-active {display: block;}

/*SITE CONFIG */
.editable {width:100%; display:block}
.editable:hover {color:red; cursor:pointer; cursor:hand;} /* both cursors needed for cross-browser support */
.editable input, select {padding:0;}
table.site_config {background:OldLace; border-collapse: separate; border-spacing: 0; border:1px inset #D9D6C4; padding:10px; margin: 0 10px;}
.site_config th {text-align:left; padding:0 0 1px 3px;font-size:105%;} /* sub-headings, both cols */
.site_config th+th { font-style:italic;font-size:95%;} /* sub-headings, right col */
.site_config td {white-space:normal;padding:3px 3px 3px 30px;} /* left-col */
.site_config td+td {background-color:#dcdcdc;  border-bottom: 1px solid OldLace; width:250px; padding:3px;} /* right/col */

/*SITE LOGS */
table.site_logs {background:OldLace; border-collapse: separate; border-spacing: 0; border:1px inset #D9D6C4; margin:10px;}
.site_logs td {width:250px; padding:5px; text-align:center;}
table#log_list   {width:100%}
#log_list_length {float:left;}
#log_list_filter {float:right;}
#log_list_info {float:left;}
#log_list_paginate {float:right;}
#log_list th {min-width: 90px;}

/* USER List */
table#list   {width:100%}
/*#list th {text-align:left;white-space:nowrap;}*/
#list img {padding-left:15px; width:25px; vertical-align:middle;}
#list img.open {width:16px; vertical-align:middle;}
#list .yes_no img {width:16px; vertical-align:middle;}
#list .name {padding-right:5px;}
#list .description {font-size:10px;	color:#666666;	width:35%;}
.dataTables_paginate {float:right;text-align:right;}
.paging_full_numbers .fg-button {cursor:pointer;padding:2px 6px;}
td.details {background-color:#D1CFD0;border:2px solid #A19B9E;}
.edit_link {white-space:nowrap;}
.edit_link:after {content:" " url("../images/edit.png");}
.details td {vertical-align:top; border-right:1px solid #808080; padding-right:20px;}
.details th {font-weight:bold; vertical-align:top; padding-left:20px;}
.details ul {margin:0; padding:0 0 0 20px;}
.odd {background-color:#dfd;}
.even {background-color:#efe;}
#list_length {float:left;}
#list_filter {float:right;}
#list_info {float:left;}
#list_paginate {float:right;}
#user-list_length {float:left;}
#user-list_filter {float:right;}
#user-list_info {float:left;}
#user-list_paginate {float:right;}

/* USER add */
table#adduser   {width:100%;}
#adduser th {text-align:left; padding:30px 0 1px 3px;font-size:105%;}
#adduser td, #adduser td+td+td {background-color:#eceadf;white-space:normal;padding:3px 3px 3px 10px;width:25%;} /* left-cols */
#adduser td+td, #adduser td+td+td+td {background-color:#dcdcdc; width:250px; padding:3px;} /* right-cols */
table#adduser2   {margin-left:30px; margin-bottom:20px; width:80%;}
/* ... */

